last change for today :) did a fixed width on cards, looks better on smaller devices

--- a/src/app.css
+++ b/src/app.css
@@ -118,7 +118,7 @@ h1{
     position: relative;
     margin-left: 2%;
     margin-right: 2%;
-    width: 25%;
+    width: 250px;
     
    
 
